--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <body>
     <div id="title">About me!</div>
     <p>I am Prince Kyle Aedam G. Tape, a student from <b>PSHS-CViSC</b>.</p>
+    <p>Info:</p>
+    <ul>
+        <li>Prodigy Discovery School (Batch 2019)</li>
+        <li>Philippine Science High School | Central Visayas Campus (Batch 2025)</li>
+    </ul>
     <p>Here are my <b>'contributions'</b> to <i>'society'</i>.</p>
     <a href="https://princekyleaedam.github.io/khub_archives/">KHub Archives</a>
     <a href="https://bit.ly/pk_archives">PK Archives</a>
