--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <p>Here are my <b>'contributions'</b> to <i>'society'</i>.</p>
     <a href="https://princekyleaedam.github.io/khub_archives/">KHub Archives</a>
     <a href="https://bit.ly/pk_archives">PK Archives</a>
-    
+
+    <p>Here are my socials:</p>
+    <a href="https://facebook.com/princekyleaedam.tape/">Facebook</a>
+    <a href="https://instagram.com/princekyleaedam">Instagram</a>
+    <a href="https://twitter.com/princekyleaedam">X (sorry for not calling it twitter)</a>    
     
 </body>
 </html>
