--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <p>Here are my <b>'contributions'</b> to <i>'society'</i>.</p>
     <a href="https://princekyleaedam.github.io/khub_archives/">KHub Archives</a>
     <a href="https://bit.ly/pk_archives">PK Archives</a>
+	<a href="https://twitter.com/princekyleaedam/status/1786789109387956240">PisayChat |my best one i think|</a>
 
     <p>Here are my socials:</p>
     <a href="https://facebook.com/princekyleaedam.tape/">Facebook</a>
