--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <li>Philippine Science High School | Central Visayas Campus (Batch 2025)</li>
     </ul>
     <p>Here are my <b>'contributions'</b> to <i>'society'</i>.</p>
-    <a href="https://princekyleaedam.github.io/khub_archives/">KHub Archives</a>
+    <p>KHub archives</p>
+    <a href="https://princekyleaedam.github.io/khub_archives/">github</a>
+    <a href="https://cvisc-knowledgehub-save.on.drv.tw/khub%20archives/">google drive</a>
     <a href="https://bit.ly/pk_archives">PK Archives</a>
 	<a href="https://twitter.com/princekyleaedam/status/1786789109387956240">PisayChat |my best one i think|</a>
 
