--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About me!</title>
     <style>
         div{
             font-size: 24;
@@ -19,16 +19,22 @@
         <li>Philippine Science High School | Central Visayas Campus (Batch 2025)</li>
     </ul>
     <p>Here are my <b>'contributions'</b> to <i>'society'</i>.</p>
-    <p>KHub archives</p>
-    <a href="https://princekyleaedam.github.io/khub_archives/">github</a>
-    <a href="https://cvisc-knowledgehub-save.on.drv.tw/khub%20archives/">google drive</a>
-    <a href="https://bit.ly/pk_archives">PK Archives</a>
-	<a href="https://twitter.com/princekyleaedam/status/1786789109387956240">PisayChat |my best one i think|</a>
+    <ul>
+        <li><a href="https://princekyleaedam.github.io/khub_archives/">KHub archives github</a></li>
+        <li><a href="https://cvisc-knowledgehub-save.on.drv.tw/khub%20archives/">KHub archives google drive</a></li>
+        <li><a href="https://bit.ly/pk_archives">PK Archives</a></li>
+        <li><a href="https://twitter.com/princekyleaedam/status/1786789109387956240">PisayChat |my best one i think|</a></li>
 
+    </ul>
     <p>Here are my socials:</p>
-    <a href="https://facebook.com/princekyleaedam.tape/">Facebook</a>
-    <a href="https://instagram.com/princekyleaedam">Instagram</a>
-    <a href="https://twitter.com/princekyleaedam">X (sorry for not calling it twitter)</a>    
+    <ul>
+        <li><a href="https://facebook.com/princekyleaedam.tape/">Facebook</a></li>
+        <li><a href="https://github.com/princekyleaedam">GitHub</a></li>
+        <li><a href="https://instagram.com/princekyleaedam">Instagram</a></li>
+        <li><a href="https://princekyleaedam.tangled.com">Tangled</a></li>
+        <li><a href="https://twitter.com/princekyleaedam">X (sorry for not calling it twitter)</a>  </li>  
     
+    </ul>
+    <div>Will be adding more content!</div>
 </body>
 </html>
