--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
     
     </ul>
     <p>Email: <a href="mailto:pgtape@cvisc.pshs.edu.ph">pgtape@cvisc.pshs.edu.ph</a></p>
+    <a href="https://princekyleaedam.blogspot.com/">My blog</a>
+    <a href="https://princekyleaedam.straw.page/">Straw page</a>
+    <p>Kiss 102.3 FM (internet test/good music)</p>
+    <audio controls="true"><source src="http://live.kiss102fmbohol.com:8000/kiss" type="audio/mpeg"></audio>
     <div>Will be adding more content!</div>
 </body>
 </html>
