--- a/index.html
+++ b/index.html
@@ -69,15 +69,16 @@
         <li><a href="https://github.com/princekyleaedam">GitHub</a></li>
         <li><a href="https://instagram.com/princekyleaedam">Instagram</a></li>
         <li><a href="https://princekyleaedam.tangled.com">Tangled</a></li>
+	<li><a href="https://www.tiktok.com/@princekyleaedam">Tiktok</a></li>
         <li><a href="https://twitter.com/princekyleaedam">X (sorry for not calling it twitter)</a></li>
-		<li><a href="https://modarchive.org/index.php?request=view_profile&query=96569">The Mod Archive</a></li>
+	<li><a href="https://modarchive.org/index.php?request=view_profile&query=96569">The Mod Archive</a></li>
     
     </ul>
     <p>Email: <a href="mailto:pgtape@cvisc.pshs.edu.ph">pgtape@cvisc.pshs.edu.ph</a></p>
     <a href="https://princekyleaedam.blogspot.com/">My blog</a>
     <a href="https://princekyleaedam.straw.page/">Straw page</a>
     <p>Kiss 102.3 FM (internet test/good music)</p>
-    <audio controls="true"><source src="http://live.kiss102fmbohol.com:8000/kiss" type="audio/mpeg"></audio>
+    <audio controls autoplay><source src="http://live.kiss102fmbohol.com:8000/kiss" type="audio/mpeg"></audio>
     <div>Will be adding more content!</div>
 </body>
 </html>
